# pn-transcriptions

./: .gitignore  LICENSE  README.md  cli.py  core.py  main.py  pyproject.toml
eval/: .gitignore  download-fleurs.ipynb  pyproject.toml  results-assemblyai.parquet  results-whisper-groq.parquet  results-whisper-local.parquet  results.ipynb  run-eval-assemblyai.ipynb  run-eval-whisper-local.ipynb  run-eval-whisper-turbo-groq.ipynb
eval/utils/: dataset.py  text.py
src/voxmem/: cli.py  csv_store.py  input.py  output.py  source.py  storage.py  transcription.py  util.py
src/voxmem/util/: path.py
tests/util/: test_path.py
