[project]
name = "pn-transcriptions"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai>=0.44.3",
    "boto3>=1.40.37",
    "botocore>=1.40.37",
    "click>=8.3.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["scripts"]
