[project]
name = "scripts"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "assemblyai>=0.44.3",
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.35.3",
    "humanize>=4.14.0",
    "ipywidgets>=8.1.7",
    "jiwer>=4.0.0",
    "mlx-whisper>=0.4.3",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "torchcodec>=0.8.1",
]
